<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">News App</string>

    <!-- List item guardian logo description -->
    <string name="the_guardian_logo_description">The Guardian logo.</string>

    <!-- List item article section placeholder -->
    <string name="article_section">Politics</string>

    <!-- List item article title placeholder -->
    <string name="article_title">Theresa May rules out participating in TV debates before election</string>

    <!-- List item article date placeholder -->
    <string name="article_date">Apr 17, 2017</string>

    <!-- List item article time placeholder -->
    <string name="article_time">08:59PM</string>

    <!-- Text to display in the list when there are no articles [CHAR LIMIT=NONE] -->
    <string name="no_news">No articles found.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>

    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">News Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>

    <!-- Label for Order-by relevance option -->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <!-- Label for Order-by newest option -->
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <!-- Label for Order-by oldest option -->
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <!-- Strings For Choose Category Preference [CHAR LIMIT=30] -->
    <string name="settings_choose_category_label">Choose News Category</string>
    <string name="settings_choose_category_key" translatable="false">choose_category</string>
    <string name="settings_choose_category_default" translatable="false">@string/settings_choose_category_all_value</string>

    <!-- Label for Choose Category All option -->
    <string name="settings_choose_category_all_label">All</string>
    <string name="settings_choose_category_all_value" translatable="false">all</string>

    <!-- Label for Choose Category Music option -->
    <string name="settings_choose_category_music_label">Music</string>
    <string name="settings_choose_category_music_value" translatable="false">music</string>

    <!-- Label for Choose Category Politics option -->
    <string name="settings_choose_category_politics_label">Politics</string>
    <string name="settings_choose_category_politics_value" translatable="false">politics</string>

    <!-- Label for Choose Category Sport option -->
    <string name="settings_choose_category_sport_label">Sport</string>
    <string name="settings_choose_category_sport_value" translatable="false">sport</string>

    <!-- Label for Choose Category Technology option -->
    <string name="settings_choose_category_technology_label">Technology</string>
    <string name="settings_choose_category_technology_value" translatable="false">technology</string>

    <!-- Label for Choose Category Travel option -->
    <string name="settings_choose_category_travel_label">Travel</string>
    <string name="settings_choose_category_travel_value" translatable="false">travel</string>

    <!-- Label for Choose Category World News option -->
    <string name="settings_choose_category_world_news_label">World News</string>
    <string name="settings_choose_category_world_news_value" translatable="false">world+news</string>

</resources>
